--- a/Ruanmou/Ruanmou/Ruanmou.csproj
+++ b/Ruanmou/Ruanmou/Ruanmou.csproj
@@ -182,6 +182,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ruanmou.MVC5.Plugins\Ruanmou.MVC5.Plugins.csproj">
+      <Project>{5e649cfd-1274-4fb8-a2e2-08da26e7cc44}</Project>
+      <Name>Ruanmou.MVC5.Plugins</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
